@@ -421,6 +421,7 @@ public:
 		int		  m_nVolumeLevel;				// measured in 100th's of a dB.  0dB is max, -60.00dB is min
 
 		bool			m_bEnableRSS; // disable RSS feeds?
+		bool			m_bShowFreeMem;
 	};
 
 	VECSHARES					m_vecMyProgramsBookmarks;
